--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -2,6 +2,11 @@ name: Image build
 
 on:
   push:
+    branches:
+      - main
+      - Release
+  schedule:
+    - cron: '0 0 * * 0' # Every Sunday at midnight
   
 env:
   LATEST: 4.0.6
@@ -9,10 +14,18 @@ env:
 jobs:
   docker:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         tags: [main, 4.0.6, 4.1.0-beta.2]
+
     steps:
+      - name: Checkout
+        if: github.event_name == 'schedule'
+        uses: actions/checkout@v4
+        with:
+          ref: Release
+
       - name: Set up Docker
         uses: docker/setup-docker-action@v4
         with:
@@ -27,7 +40,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up QEMU
@@ -46,8 +59,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          load: ${{ github.event_name == 'pull_request' }}
+          push: ${{ github.ref_name == 'Release' }}
+          load: ${{ github.ref_name != 'Release' }}
           file: Containerfile
           build-args: BRANCH=${{ matrix.tags }}
           tags: ${{ steps.tag-builder.outputs.IMAGETAG }}
