--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -59,8 +59,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.ref_name == 'Release' }}
-          load: ${{ github.ref_name != 'Release' }}
-          file: Containerfile
+          push: ${{ github.ref_name == 'Release' || github.event_name == 'schedule' }}
+          load: ${{ github.ref_name != 'Release' && github.event_name != 'schedule' }}
           build-args: BRANCH=${{ matrix.tags }}
           tags: ${{ steps.tag-builder.outputs.IMAGETAG }}
