Add file context do docker build

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -63,3 +63,4 @@ jobs:
           load: ${{ github.ref_name != 'Release' && github.event_name != 'schedule' }}
           build-args: BRANCH=${{ matrix.tags }}
           tags: ${{ steps.tag-builder.outputs.IMAGETAG }}
+          file: ./Containerfile
